[gd_scene load_steps=7 format=3 uid="uid://diqtjiyoulkmf"]

[ext_resource type="PackedScene" uid="uid://bq7be4ojysd3b" path="res://Godot-Scenes/Character.tscn" id="1_1apm4"]
[ext_resource type="PackedScene" uid="uid://cfb3xt2nlfb3t" path="res://Godot-Scenes/Tilemap-LVL1.tscn" id="1_d5nbb"]
[ext_resource type="Script" path="res://Godot-Scipts/Level_1.gd" id="1_x8nll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmf58"]
size = Vector2(1158, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gv2lx"]
size = Vector2(2, 118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqoax"]
size = Vector2(11, 708)

[node name="Level_01" type="Node2D"]
script = ExtResource("1_x8nll")

[node name="MovingCam" type="Camera2D" parent="."]
position = Vector2(288, 486)
zoom = Vector2(2, 2)

[node name="Char" parent="." instance=ExtResource("1_1apm4")]
position = Vector2(36, 537)

[node name="TileMap" parent="." instance=ExtResource("1_d5nbb")]
position = Vector2(0, 568)
layer_0/tile_data = PackedInt32Array(262144, 0, 0, 262145, 65536, 0, 262146, 65536, 0, 262156, 65536, 0, 262155, 65536, 0, 262154, 65536, 0, 262153, 65536, 0, 262152, 65536, 0, 262151, 65536, 0, 262150, 65536, 0, 262149, 65536, 0, 262148, 65536, 0, 262147, 65536, 0, 262165, 65536, 0, 262166, 65536, 0, 262167, 65536, 0, 262168, 65536, 0, 262169, 65536, 0, 262170, 65536, 0, 262171, 65536, 0, 262172, 65536, 0, 262173, 65536, 0, 262174, 65536, 0, 262175, 65536, 0, 262176, 65536, 0, 262177, 65536, 0, 262178, 65536, 0, 262157, 131072, 0, 262164, 0, 0, 262179, 65536, 0, 262180, 65536, 0, 262181, 65536, 0, 262182, 65536, 0, 262186, 65536, 0, 262187, 65536, 0, 262188, 65536, 0, 262189, 65536, 0, 262190, 65536, 0, 262191, 65536, 0, 262183, 65536, 0, 262184, 65536, 0, 262185, 65536, 0, 262192, 65536, 0, 262193, 65536, 0, 262194, 65536, 0, 262195, 65536, 0, 262196, 65536, 0, 262197, 65536, 0, 262198, 65536, 0, 262199, 65536, 0, 262200, 65536, 0, 262202, 65536, 0, 262201, 65536, 0, 262203, 65536, 0, 262204, 65536, 0, 262205, 65536, 0, 262206, 65536, 0, 262207, 65536, 0, 262208, 65536, 0, 262209, 65536, 0, 262210, 65536, 0, 262211, 65536, 0, 262212, 65536, 0, 262213, 65536, 0, 262214, 65536, 0, 262215, 65536, 0, 262216, 65536, 0, 262217, 131072, 0, 262218, 131072, 0, 262219, 131072, 0, 262220, 131072, 0, 262221, 131072, 0, 262222, 131072, 0)

[node name="DeathTrigger" type="Area2D" parent="."]
position = Vector2(236, 556)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathTrigger"]
position = Vector2(342, 101.5)
shape = SubResource("RectangleShape2D_vmf58")

[node name="Next_area_horizontal_trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Next_area_horizontal_trigger"]
position = Vector2(578, 573)
shape = SubResource("RectangleShape2D_gv2lx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Next_area_horizontal_trigger"]
position = Vector2(1146, 572)
shape = SubResource("RectangleShape2D_gv2lx")

[node name="HITBOXh" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HITBOXh"]
position = Vector2(-4.5, 313)
shape = SubResource("RectangleShape2D_mqoax")

[node name="Markers" type="Node" parent="."]

[node name="C01" type="Marker2D" parent="Markers"]
position = Vector2(288, 486)

[node name="C02" type="Marker2D" parent="Markers"]
position = Vector2(864, 489)

[node name="C03" type="Marker2D" parent="Markers"]
position = Vector2(1440, 489)

[connection signal="body_entered" from="DeathTrigger" to="." method="_on_death_trigger_body_entered"]
[connection signal="body_entered" from="Next_area_horizontal_trigger" to="." method="_on_next_area_horizontal_trigger_body_entered"]
